--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "prettier": "^2.3.2"
   },
   "lint-staged": {
-    "*.js": "eslint --cache --fix"
+    
+    "backend/**/*.js": "eslint --cache fix"
   }
 }
