--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/zurichat/zc_plugin_reminder#readme",
   "devDependencies": {
     "eslint": "^7.32.0",
+    "eslint-plugin-prettier": "^3.4.1",
     "husky": "^7.0.2",
     "lint-staged": "^11.1.2"
   },
