--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,5 +6,8 @@
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-prettier": "^3.4.1",
     "prettier": "^2.3.2"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
