--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,7 +20,7 @@ jobs:
         
     steps:
     - name: Checkout repo
-    - uses: actions/checkout@v2
+      uses: actions/checkout@v2
     
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
@@ -29,11 +29,11 @@ jobs:
         cache: 'npm'
         
     - name: Install dependencies
-    - run: npm install
+      run: npm install
     
     - name: Run tests
-    - run: npm test
+      run: npm test
     
     - name: Build
-    - run: npm run build
+      run: npm run build
     
