--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
 	"devDependencies": {
 		"@types/jest": "^27.0.1",
 		"@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
+		"babel-eslint": "^10.1.0",
 		"eslint-plugin-unused-imports": "^1.1.4"
 	}
 }
