react-bootstrap install

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,11 @@
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
 		"autoprefixer": "^9.8.6",
+		"bootstrap": "^5.1.0",
 		"enzyme": "^3.11.0",
 		"postcss": "^7.0.36",
 		"react": "^17.0.2",
+		"react-bootstrap": "^2.0.0-beta.6",
 		"react-dom": "^17.0.2",
 		"react-scripts": "4.0.3",
 		"react-test-renderer": "^17.0.2",
