--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,19 +4,12 @@
 	"private": true,
 	"dependencies": {
 		"@craco/craco": "^6.2.0",
-		"@testing-library/jest-dom": "^5.11.4",
-		"@testing-library/react": "^11.1.0",
-		"@testing-library/user-event": "^12.1.10",
-		"autoprefixer": "^9.8.6",
 		"bootstrap": "^5.1.0",
-		"enzyme": "^3.11.0",
-		"postcss": "^7.0.36",
 		"react": "^17.0.2",
 		"react-bootstrap": "^2.0.0-beta.6",
 		"react-dom": "^17.0.2",
 		"react-scripts": "4.0.3",
 		"react-test-renderer": "^17.0.2",
-		"tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.8",
 		"web-vitals": "^1.0.1"
 	},
 	"scripts": {
@@ -45,10 +38,17 @@
 		]
 	},
 	"devDependencies": {
+		"@testing-library/jest-dom": "^5.14.1",
+		"@testing-library/react": "^12.0.0",
+		"@testing-library/user-event": "^13.2.1",
 		"@types/jest": "^27.0.1",
 		"@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
+		"autoprefixer": "^9.8.6",
 		"babel-eslint": "^10.1.0",
+		"enzyme": "^3.11.0",
 		"eslint-plugin-react": "^7.25.0",
-		"eslint-plugin-unused-imports": "^1.1.4"
+		"eslint-plugin-unused-imports": "^1.1.4",
+		"postcss": "^7.0.36",
+		"tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.9"
 	}
 }
