--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"lint": "eslint -c Backend/.eslintrc.js 'Backend/src/**'",
+		"lint": "eslint -c Backend/.eslintrc.js 'Backend/src/**' --fix",
 		"prepare": "husky install",
 		"uniInstall": "npm install; (cd Backend && npm install); (cd frontend && npm install);"
 	},
