--- a/Backend/package.json
+++ b/Backend/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@babel/runtime-corejs3": "^7.14.7",
+    "amqplib": "^0.8.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "joi": "^17.4.2",
