--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"lint": "eslint -c Backend/.eslintrc.js 'Backend/src/**' --fix",
 		"prepare": "husky install",
-		"uniInstall": "npm install; (cd Backend && npm install); (cd frontend && npm install);"
+		"holoInstall": "npm install; (cd Backend && npm install); (cd frontend && npm install);"
 	},
 	"repository": {
 		"type": "git",
