--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,7 @@
 		"build": "craco build",
 		"test": "craco test",
 		"eject": "react-scripts eject",
-		"lint": "eslint ."
+		"lint": "eslint . --fix"
 	},
 	"eslintConfig": {
 		"extends": [
