--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
 	"private": true,
 	"dependencies": {
 		"@craco/craco": "^6.2.0",
+		"@headlessui/react": "^1.4.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-scripts": "4.0.3",
