--- a/package.json
+++ b/package.json
@@ -4,10 +4,17 @@
 	"description": "## #team-darwin",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
 		"lint": "eslint -c Backend/.eslintrc.js 'Backend/src/**' --fix",
 		"prepare": "husky install",
-		"holoInstall": "npm install; (cd Backend && npm install); (cd frontend && npm install);"
+		"holoInstall": "npm install; (cd frontend && npm install);",
+		"test": "cross-env NODE_ENV=test mocha ./tests/**/*.spec.js -r @babel/register --timeout=100000 --exit",
+		"test:watch": "cross-env NODE_ENV=test mocha ./tests/**/*.spec.js -r @babel/register --timeout=100000 --watch --exit",
+		"start:backend": "cross-env NODE_ENV=development nodemon -L --exec babel-node ./src/index.js",
+		"start:frontend": "cd frontend && npm start",
+		"dev": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
+		"clean": "rimraf dist",
+		"build": "npm run clean && babel src -d dist --source-maps --copy-files",
+		"start": "node index.js"
 	},
 	"repository": {
 		"type": "git",
@@ -21,8 +28,20 @@
 	},
 	"homepage": "https://github.com/zurichat/zc_plugin_reminder#readme",
 	"devDependencies": {
+		"@babel/cli": "^7.14.8",
+		"@babel/core": "^7.15.0",
 		"@babel/eslint-parser": "^7.15.0",
 		"@babel/eslint-plugin": "^7.14.5",
+		"@babel/node": "^7.14.9",
+		"@babel/plugin-proposal-class-properties": "^7.14.5",
+		"@babel/plugin-transform-runtime": "^7.15.0",
+		"@babel/preset-env": "^7.15.0",
+		"@babel/preset-react": "^7.14.5",
+		"@babel/preset-typescript": "^7.15.0",
+		"@babel/register": "^7.15.3",
+		"@babel/runtime": "^7.15.3",
+		"babel-plugin-module-resolver": "^4.1.0",
+		"concurrently": "^6.2.1",
 		"eslint": "^7.32.0",
 		"eslint-config-airbnb-base": "^14.2.1",
 		"eslint-config-prettier": "^8.3.0",
@@ -31,9 +50,22 @@
 		"eslint-plugin-prettier": "^3.4.1",
 		"husky": "^7.0.2",
 		"lint-staged": "^11.1.2",
-		"prettier": "^2.3.2"
+		"rimraf": "^3.0.2",
+		"chai": "^4.3.4",
+    	"cross-env": "^7.0.3",
+		"mocha": "^9.1.1",
+    	"nodemon": "^2.0.12",
+    	"prettier": "^2.3.2"
 	},
 	"lint-staged": {
 		"*.js": "eslint --cache --no-error-on-unmatched-pattern --fix"
+	},
+	"dependencies": {
+		"@babel/runtime-corejs3": "^7.15.3",
+		"amqplib": "^0.8.0",
+		"dotenv": "^10.0.0",
+		"express": "^4.17.1",
+		"joi": "^17.4.2",
+		"mongoose": "^6.0.3"
 	}
 }
