--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,6 @@ jobs:
           script: |
             cd /var/www/zc_plugin_reminder/
             git pull
-            cd /var/www/zc_plugin_reminder/frontend
-            yarn install
-            yarn build
-            PM2_HOME=/opt/pm2/.pm2 pm2 restart reminders_plugin
+            npm run holoInstall
+            npm run build
+            pm2 start npm --start
