--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
 		"@babel/register": "^7.15.3",
 		"@babel/runtime": "^7.15.3",
 		"babel-plugin-module-resolver": "^4.1.0",
+		"chai": "^4.3.4",
 		"concurrently": "^6.2.1",
+		"cross-env": "^7.0.3",
 		"eslint": "^7.32.0",
 		"eslint-config-airbnb-base": "^14.2.1",
 		"eslint-config-prettier": "^8.3.0",
@@ -50,12 +52,10 @@
 		"eslint-plugin-prettier": "^3.4.1",
 		"husky": "^7.0.2",
 		"lint-staged": "^11.1.2",
-		"rimraf": "^3.0.2",
-		"chai": "^4.3.4",
-    	"cross-env": "^7.0.3",
 		"mocha": "^9.1.1",
-    	"nodemon": "^2.0.12",
-    	"prettier": "^2.3.2"
+		"nodemon": "^2.0.12",
+		"prettier": "^2.3.2",
+		"rimraf": "^3.0.2"
 	},
 	"lint-staged": {
 		"*.js": "eslint --cache --no-error-on-unmatched-pattern --fix"
@@ -63,6 +63,7 @@
 	"dependencies": {
 		"@babel/runtime-corejs3": "^7.15.3",
 		"amqplib": "^0.8.0",
+		"axios": "^0.21.1",
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
 		"joi": "^17.4.2",
