--- a/jsconfig.json
+++ b/jsconfig.json
@@ -12,6 +12,7 @@
 			"@controllers/*": ["controllers/*"],
 			"@models/*": ["models/*"],
 			"@routes/*": ["routes/*"],
+			"@types/*": ["types/*"]
 		}
 	}
 }
