--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,8 +24,12 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           script: |
             cd /var/www/zc_plugin_reminder/
-            git pull
-            npm run holoInstall
-            npm run build
-            ls -la
-            pm2 start npm -- start
+            rm rf .
+            git clone https://github.com/zurichat/zc_plugin_reminder.git . --branch master
+            touch .env
+            echo MONGO_DB_URL=${{secrets.MONGO_DB_URL}} >> .env
+            echo PORT=${{secrets.PORT}} >> .env
+            cat .env
+            yarn holoInstall
+            yarn build
+            yarn start
