--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,8 +24,9 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           script: |
             cd /var/www/zc_plugin_reminder/
+            git stash
             git pull
             cd /var/www/zc_plugin_reminder/frontend
-            yarn holoInstall
+            yarn run holoInstall
             yarn build
             pm2 start reminders_plugin
