--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,12 +19,11 @@ jobs:
       - name: Deployment
         uses: appleboy/ssh-action@master
         with:
-          key: ${{ secrets.PRIVATE_KEY }}
+          password: ${{ secrets.PASSWORD }}
           host: ${{ secrets.HOSTNAME }}
           username: ${{ secrets.USERNAME }}
           script: |
             cd /var/www/zc_plugin_reminder/
-            git stash
             git pull
             yarn run holoInstall
             yarn run build
