--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
 		"@headlessui/react": "^1.4.1",
 		"axios": "^0.21.1",
 		"react": "^17.0.2",
+		"react-calendar": "^3.4.0",
 		"react-dom": "^17.0.2",
 		"react-query": "^3.21.1",
 		"react-scripts": "4.0.3",
