--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
 		"@testing-library/react": "^12.0.0",
 		"@testing-library/user-event": "^13.2.1",
 		"@types/jest": "^27.0.1",
+		"@types/react": "^17.0.19",
 		"autoprefixer": "^9.8.6",
 		"babel-eslint": "^10.1.0",
 		"eslint-plugin-react": "^7.25.0",
