--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
 		"web-vitals": "^1.0.1"
 	},
 	"scripts": {
-		"start": "set TAILWIND_MODE=watch&craco start",
+		"start": "craco start",
 		"build": "craco build",
 		"test": "craco test",
 		"eject": "react-scripts eject",
