--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
 		"lint-staged": "^11.1.2",
 		"mocha": "^9.1.1",
 		"nodemon": "^2.0.12",
-		"prettier": "^2.3.2",
+		"prettier": "2.3.2",
 		"rimraf": "^3.0.2"
 	},
 	"lint-staged": {
