--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,17 +5,14 @@
 	"dependencies": {
 		"@craco/craco": "^6.2.0",
 		"@headlessui/react": "^1.4.1",
-		"axios": "^0.21.1",
 		"react": "^17.0.2",
-		"react-calendar": "^3.4.0",
 		"react-dom": "^17.0.2",
-		"react-query": "^3.21.1",
 		"react-scripts": "4.0.3",
 		"react-test-renderer": "^17.0.2",
 		"web-vitals": "^1.0.1"
 	},
 	"scripts": {
-		"start": "craco start",
+		"start": "set TAILWIND_MODE=watch&craco start",
 		"build": "craco build",
 		"test": "craco test",
 		"eject": "react-scripts eject",
