--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
 		"@craco/craco": "^6.2.0",
 		"@headlessui/react": "^1.4.1",
 		"axios": "^0.21.1",
+		"craco": "0.0.3",
 		"react": "^17.0.2",
 		"react-calendar": "^3.4.0",
 		"react-dom": "^17.0.2",
