--- a/package.json
+++ b/package.json
@@ -66,7 +66,10 @@
 		"axios": "^0.21.1",
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
+		"faker": "^5.5.3",
+		"http-status-codes": "^2.1.4",
 		"joi": "^17.4.2",
-		"mongoose": "^6.0.3"
+		"mongoose": "^6.0.3",
+		"supertest": "^6.1.6"
 	}
 }
