env file setup and initial project launch

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
 	},
 	"dependencies": {
 		"@babel/runtime-corejs3": "^7.15.3",
+		"agenda": "^4.2.1",
 		"amqplib": "^0.8.0",
 		"axios": "^0.21.1",
 		"dotenv": "^10.0.0",
