update to run husky

--- a/package.json
+++ b/package.json
@@ -55,11 +55,11 @@
 		"rimraf": "^3.0.2"
 	},
 	"lint-staged": {
-		"*.js": "eslint --cache --no-error-on-unmatched-pattern --fix"
+		"*.{js, jsx}": "eslint --cache --no-error-on-unmatched-pattern --fix"
 	},
 	"husky": {
 		"hooks": {
-			"pre-commit": "yarn lint"
+			"pre-commit": "yarn lint-staged"
 		}
 	},
 	"dependencies": {
