--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
 	"dependencies": {
 		"@craco/craco": "^6.2.0",
 		"@headlessui/react": "^1.4.1",
+		"@heroicons/react": "^1.0.4",
 		"axios": "^0.21.1",
 		"react": "^17.0.2",
 		"react-calendar": "^3.4.0",
