fixes #260 Search Route for Reminder Using Query

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -12,7 +12,8 @@
 			"@controllers/*": ["controllers/*"],
 			"@models/*": ["models/*"],
 			"@routes/*": ["routes/*"],
-			"@types/*": ["types/*"]
+			"@types/*": ["types/*"],
+			"@sockets/*": ["sockets/*"]
 		}
 	}
 }
