--- a/package.json
+++ b/package.json
@@ -67,11 +67,14 @@
 		"amqplib": "^0.8.0",
 		"axios": "^0.21.1",
 		"dotenv": "^10.0.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-prettier": "^4.0.0",
 		"express": "^4.17.1",
 		"faker": "^5.5.3",
 		"http-status-codes": "^2.1.4",
 		"joi": "^17.4.2",
 		"mongoose": "^6.0.3",
+		"prettier": "^2.3.2",
 		"supertest": "^6.1.6"
 	}
 }
