--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
 		"joi": "^17.4.2",
-		"mongoose": "^6.0.3"
+		"mongoose": "^6.0.3",
+		"supertest": "^6.1.6"
 	}
 }
