--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-import-resolver-babel-module": "^5.3.1",
 		"eslint-plugin-import": "^2.24.2",
-		"eslint-plugin-prettier": "^3.4.1",
+		"eslint-plugin-prettier": "^4.0.0",
 		"husky": "^7.0.2",
 		"lint-staged": "^11.1.2",
 		"mocha": "^9.1.1",
@@ -62,6 +62,7 @@
 	},
 	"dependencies": {
 		"@babel/runtime-corejs3": "^7.15.3",
+		"@craco/craco": "^6.2.0",
 		"amqplib": "^0.8.0",
 		"axios": "^0.21.1",
 		"dotenv": "^10.0.0",
