--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,8 @@
 	"dependencies": {
 		"@craco/craco": "^6.2.0",
 		"@headlessui/react": "^1.4.1",
+		"@heroicons/react": "^1.0.4",
+		"axios": "^0.21.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-scripts": "4.0.3",
@@ -23,6 +25,11 @@
 			"react-app",
 			"react-app/jest"
 		]
+	},
+	"jest": {
+		"moduleNameMapper": {
+			"@/(.+)": "<rootDir>/src/*"
+		}
 	},
 	"browserslist": {
 		"production": [
@@ -43,9 +50,12 @@
 		"@types/jest": "^27.0.1",
 		"autoprefixer": "^9.8.6",
 		"babel-eslint": "^10.1.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-react": "^7.25.0",
 		"eslint-plugin-unused-imports": "^1.1.4",
 		"postcss": "^7.0.36",
+		"prettier": "2.3.2",
 		"tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.9"
 	}
 }
