--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
 JWT_SECRET=
+PORT=
+MONGO_DB_URL=
 PLUGIN_ID = 
 ORG_ID =
 BASE_URL =
-PORT=9002
-MONGO_DB_URL=mongodb+srv://moneyguard:HE7ng3jfkIdrJAXP@staging-db.n6neu.mongodb.net/rytouch?retryWrites=true&w=majority
-AMQP_URL=amqp://rabbitmq:5672
