--- a/frontend/package.json
+++ b/frontend/package.json
@@ -59,5 +59,6 @@
 		"postcss": "^7.0.36",
 		"prettier": "2.3.2",
 		"tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.9"
-	}
+	},
+	"proxy": "http://localhost:9002"
 }
