--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,5 +31,6 @@ jobs:
             git pull origin dev
             yarn run holoInstall
             yarn run build
+            PORT=3008 pm2 start yarn --name "reminders_plugin" --max-memory-restart 670M  -- start
             pm2 list
             pm2 restart reminders_plugin
