--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
 		"http-status-codes": "^2.1.4",
 		"joi": "^17.4.2",
 		"mongoose": "^6.0.3",
+		"react-activity": "^2.1.1",
 		"supertest": "^6.1.6"
 	}
 }
