--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
 		"lint": "eslint -c .eslintrc.js \"src/**\" --fix",
 		"prepare": "husky install",
 		"holoInstall": "yarn install && cd frontend && yarn install",
-		"test": "cross-env NODE_ENV=test mocha ./tests/**/*.spec.js -r @babel/register --timeout=100000 --exit",
+		"test": "cross-env NODE_ENV=production mocha ./tests/**/*.spec.js -r @babel/register --timeout=100000 --exit",
 		"test:watch": "cross-env NODE_ENV=test mocha ./tests/**/*.spec.js -r @babel/register --timeout=100000 --watch --exit",
-		"start:backend": "cross-env NODE_ENV=development nodemon --exec babel-node ./src/index.js",
+		"start:backend": "cross-env NODE_ENV=production nodemon --exec babel-node ./src/index.js",
 		"start:frontend": "cd frontend && npm start",
 		"dev": "concurrently \"yarn start:backend\" \"yarn start:frontend\"",
 		"clean": "rimraf dist",
