--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
 		"react": "^17.0.2",
 		"react-activity": "^2.1.1",
 		"react-calendar": "^3.4.0",
+		"react-datepicker": "^4.2.1",
 		"react-dom": "^17.0.2",
+		"react-hook-form": "^7.15.1",
 		"react-query": "^3.21.1",
 		"react-scripts": "4.0.3",
 		"react-test-renderer": "^17.0.2",
