--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
 		"react-calendar": "^3.4.0",
 		"react-dom": "^17.0.2",
 		"react-query": "^3.21.1",
+		"react-router-dom": "^5.3.0",
 		"react-scripts": "4.0.3",
 		"react-test-renderer": "^17.0.2",
 		"web-vitals": "^1.0.1"
@@ -19,7 +20,7 @@
 	"scripts": {
 		"start": "craco start",
 		"build": "craco build",
-		"test": "craco test",
+		"test": "craco test --testPathIgnorePatterns=__compat__",
 		"eject": "react-scripts eject",
 		"lint": "eslint . --fix"
 	},
