--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,6 +49,7 @@
 	"devDependencies": {
 		"@testing-library/jest-dom": "^5.14.1",
 		"@testing-library/react": "^12.0.0",
+		"@testing-library/react-hooks": "^7.0.2",
 		"@testing-library/user-event": "^13.2.1",
 		"@types/jest": "^27.0.1",
 		"autoprefixer": "^9.8.6",
