--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Run tests
         working-directory: ./frontend
-        run: yarn test --passWithNoTests
+        run: yarn test
 
       - name: Build
         working-directory: ./frontend
