--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Run FE tests
         working-directory: ./frontend
-        run: yarn test --passWithNoTests
+        run: yarn test
 
       - name: Build Test
         run: yarn build
