--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,7 @@
 	"scripts": {
 		"start": "craco start",
 		"build": "craco build",
-		"test": "craco test --testPathIgnorePatterns=__compat__",
+		"test": "craco test --testPathIgnorePatterns=__compat__ --passWithNoTests",
 		"eject": "react-scripts eject",
 		"lint": "eslint . --fix"
 	},
