--- a/package.json
+++ b/package.json
@@ -81,6 +81,8 @@
 		"joi": "^17.4.2",
 		"mongoose": "^6.0.3",
 		"react-activity": "^2.1.1",
-		"supertest": "^6.1.6"
+		"supertest": "^6.1.6",
+		"swagger-jsdoc": "^6.1.0",
+		"swagger-ui-express": "^4.1.6"
 	}
 }
