--- a/package.json
+++ b/package.json
@@ -83,6 +83,8 @@
 		"mongoose": "^6.0.3",
 		"react-activity": "^2.1.1",
 		"react-icons": "^4.2.0",
-		"supertest": "^6.1.6"
+		"supertest": "^6.1.6",
+		"swagger-jsdoc": "^6.1.0",
+		"swagger-ui-express": "^4.1.6"
 	}
 }
