--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"babel-plugin-module-resolver": "^4.1.0",
 		"chai": "^4.3.4",
 		"concurrently": "^6.2.1",
+		"craco-plugin-single-spa-application": "^1.0.8",
 		"cross-env": "^7.0.3",
 		"eslint": "^7.32.0",
 		"eslint-config-airbnb-base": "^14.2.1",
