--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,6 +55,7 @@
 		"@types/jest": "^27.0.1",
 		"autoprefixer": "^9.8.6",
 		"babel-eslint": "^10.1.0",
+		"craco-plugin-single-spa-application": "^1.0.8",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-react": "^7.25.0",
@@ -64,11 +65,11 @@
 		"prettier": "2.3.2",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"single-spa-react": "^4.4.0",
 		"tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.9"
 	},
 	"peerDependencies": {
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2"
-	},
-	"proxy": "http://localhost:5621"
+	}
 }
