--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
 	"scripts": {
 		"start": "craco start",
 		"build": "craco build",
+		"build:production": "craco build --prod",
 		"test": "craco test --testPathIgnorePatterns=__compat__ --passWithNoTests",
 		"eject": "react-scripts eject",
 		"lint": "eslint . --fix"
