--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
 		"amqplib": "^0.8.0",
 		"axios": "^0.21.1",
 		"centrifuge": "^2.8.0",
+		"cors": "^2.8.5",
 		"dotenv": "^10.0.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-prettier": "^4.0.0",
