--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
 		"@craco/craco": "^6.2.0",
 		"@headlessui/react": "^1.4.1",
 		"@heroicons/react": "^1.0.4",
+		"@tailwindcss/line-clamp": "^0.2.1",
 		"axios": "^0.21.1",
 		"react": "^17.0.2",
 		"react-activity": "^2.1.1",
