--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
 		"react-activity": "^2.1.1",
 		"react-calendar": "^3.4.0",
 		"react-dom": "^17.0.2",
+		"react-hot-toast": "^2.1.1",
 		"react-query": "^3.21.1",
 		"react-router-dom": "^5.3.0",
 		"react-scripts": "4.0.3",
