--- a/frontend/package.json
+++ b/frontend/package.json
@@ -67,6 +67,7 @@
 		"prettier": "2.3.2",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"recursive-readdir": "^2.2.2",
 		"single-spa-react": "^4.4.0",
 		"tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.9"
 	},
