--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"lint": "eslint -c .eslintrc.js \"src/**\" --fix",
-		"prepare": "husky install && cd frontend && husky install",
+		"prepare": "husky install && husky install frontend/.husky",
 		"holoInstall": "yarn install && cd frontend && yarn install",
 		"test": "cross-env NODE_ENV=production mocha ./tests/**/*.spec.js -r @babel/register --timeout=100000 --exit",
 		"test:watch": "cross-env NODE_ENV=test mocha ./tests/**/*.spec.js -r @babel/register --timeout=100000 --watch --exit",
