--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "zc-reminder",
+	"name": "@zuri/zuri-plugin-deadlines",
 	"version": "1.0.0",
 	"description": "## #team-darwin",
 	"main": "index.js",
@@ -11,7 +11,9 @@
 		"test:watch": "cross-env NODE_ENV=test mocha ./tests/**/*.spec.js -r @babel/register --timeout=100000 --watch --exit",
 		"start:backend": "cross-env NODE_ENV=production nodemon --exec babel-node ./src/index.js",
 		"start:frontend": "cd frontend && npm start",
-		"dev": "concurrently \"yarn start:backend\" \"yarn start:frontend\"",
+		"start:root": "cd root && npm start",
+		"dev:frontend": "npm-run-all --parallel start:frontend start:root",
+		"dev": "npm-run-all --parallel start:backend dev:frontend",
 		"clean": "rimraf dist",
 		"build": "cd frontend && yarn build && cd .. && yarn clean && babel src -d dist --source-maps --copy-files",
 		"start": "node ./dist/index.js"
@@ -41,6 +43,7 @@
 		"@babel/register": "^7.15.3",
 		"@babel/runtime": "^7.15.3",
 		"babel-plugin-module-resolver": "^4.1.0",
+		"babel-plugin-named-asset-import": "^0.3.7",
 		"chai": "^4.3.4",
 		"concurrently": "^6.2.1",
 		"craco-plugin-single-spa-application": "^1.0.8",
@@ -55,8 +58,11 @@
 		"lint-staged": "^11.1.2",
 		"mocha": "^9.1.1",
 		"nodemon": "^2.0.12",
+		"npm-run-all": "^4.1.5",
+		"postcss-loader": "^6.1.1",
 		"prettier": "^2.3.2",
-		"rimraf": "^3.0.2"
+		"rimraf": "^3.0.2",
+		"style-loader": "^3.3.0"
 	},
 	"lint-staged": {
 		"*.{js,jsx}": "eslint --cache --no-error-on-unmatched-pattern --fix"
@@ -83,7 +89,6 @@
 		"joi": "^17.4.2",
 		"luxon": "^2.0.2",
 		"mongoose": "^6.0.3",
-		"react-activity": "^2.1.1",
 		"react-icons": "^4.2.0",
 		"supertest": "^6.1.6",
 		"swagger-jsdoc": "^6.1.0",
