--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
 		"npm-run-all": "^4.1.5",
 		"postcss-loader": "^6.1.1",
 		"prettier": "^2.3.2",
+		"pretty-quick": "^3.1.1",
 		"rimraf": "^3.0.2",
 		"style-loader": "^3.3.0"
 	},
@@ -69,7 +70,7 @@
 	},
 	"husky": {
 		"hooks": {
-			"pre-commit": "yarn exec pretty-quick --staged && yarn exec concurrently yarn:test yarn:lint"
+			"pre-commit": "yarn exec pretty-quick --staged && yarn:lint"
 		}
 	},
 	"dependencies": {
