bundling and unused deps

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,12 @@
 		"react-router-dom": "^5.3.0",
 		"react-scripts": "4.0.3",
 		"react-test-renderer": "^17.0.2",
-		"single-spa-react": "^4.3.1",
+		"single-spa-react": "^4.4.0",
 		"web-vitals": "^1.0.1"
 	},
 	"scripts": {
 		"start": "webpack serve --port 9001",
-		"build": "concurrently yarn:build:*",
+		"build": "rm -rf dist && NODE_ENV=production webpack --mode=production",
 		"test": "cross-env BABEL_ENV=test jest",
 		"eject": "react-scripts eject",
 		"lint": "eslint src --ext js",
@@ -73,7 +73,6 @@
 		"babel-eslint": "^10.1.0",
 		"babel-jest": "^27.0.6",
 		"concurrently": "^6.2.1",
-		"craco-plugin-single-spa-application": "^1.0.8",
 		"cross-env": "^7.0.3",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
@@ -91,7 +90,6 @@
 		"pretty-quick": "^3.1.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
-		"single-spa-react": "^4.4.0",
 		"tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.9",
 		"url-loader": "^4.1.1",
 		"webpack": "^5.51.1",
