--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
 		"@heroicons/react": "^1.0.4",
 		"@tailwindcss/line-clamp": "^0.2.1",
 		"axios": "^0.21.1",
+		"dayjs": "^1.10.7",
 		"react-calendar": "^3.4.0",
 		"react-hot-toast": "^2.1.1",
 		"react-query": "^3.21.1",
@@ -86,8 +87,6 @@
 		"postcss": "^7.0.36",
 		"prettier": "^2.3.2",
 		"pretty-quick": "^3.1.1",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
 		"tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.9",
 		"url-loader": "^4.1.1",
 		"webpack": "^5.51.1",
