remove install-peers dep

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
 		"@tailwindcss/line-clamp": "^0.2.1",
 		"axios": "^0.21.1",
 		"dayjs": "^1.10.7",
+		"react": "^17.0.2",
 		"react-calendar": "^3.4.0",
+		"react-dom": "^17.0.2",
 		"react-hot-toast": "^2.1.1",
 		"react-query": "^3.21.1",
 		"react-router-dom": "^5.3.0",
@@ -81,7 +83,6 @@
 		"eslint-plugin-unused-imports": "^1.1.4",
 		"husky": "^7.0.2",
 		"identity-obj-proxy": "^3.0.0",
-		"install-peers": "^1.0.3",
 		"jest": "^27.0.6",
 		"jest-cli": "^27.0.6",
 		"postcss": "^7.0.36",
