--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,12 @@
 		"react": "^17.0.2",
 		"react-calendar": "^3.4.0",
 		"react-dom": "^17.0.2",
-		"react-hot-toast": "^2.1.1",
 		"react-query": "^3.21.1",
 		"react-router-dom": "^5.3.0",
 		"react-scripts": "4.0.3",
+		"react-shadow": "^19.0.2",
 		"react-test-renderer": "^17.0.2",
+		"react-toastify": "^8.0.2",
 		"single-spa-react": "^4.4.0",
 		"web-vitals": "^1.0.1"
 	},
