--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,11 +28,11 @@ jobs:
           cache: 'yarn'
 
       - name: Install monorepo dependencies
-        run: CI="" yarn install
+        run: yarn install
 
       - name: Install frontend dependencies
         working-directory: ./frontend
-        run: CI="" yarn install
+        run: yarn install
 
       - name: Run tests
         working-directory: ./frontend
@@ -40,4 +40,4 @@ jobs:
 
       - name: Build
         working-directory: ./frontend
-        run: CI="" yarn build
+        run: yarn build
