--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@zuri/zuri-plugin-deadlines",
+	"name": "frontend",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
@@ -8,8 +8,8 @@
 		"@heroicons/react": "^1.0.4",
 		"@tailwindcss/line-clamp": "^0.2.1",
 		"axios": "^0.21.1",
-		"dayjs": "^1.10.7",
 		"react": "^17.0.2",
+		"react-activity": "^2.1.1",
 		"react-calendar": "^3.4.0",
 		"react-dom": "^17.0.2",
 		"react-hot-toast": "^2.1.1",
@@ -17,22 +17,14 @@
 		"react-router-dom": "^5.3.0",
 		"react-scripts": "4.0.3",
 		"react-test-renderer": "^17.0.2",
-		"single-spa-react": "^4.4.0",
 		"web-vitals": "^1.0.1"
 	},
 	"scripts": {
-		"start": "webpack serve --port 9001",
-		"build": "rm -rf dist && NODE_ENV=production CI=true webpack --mode=production",
-		"test": "cross-env BABEL_ENV=test jest",
+		"start": "craco start",
+		"build": "craco build",
+		"test": "craco test --passWithNoTests --watchAll=false",
 		"eject": "react-scripts eject",
-		"lint": "eslint src --ext js",
-		"start:standalone": "webpack serve --env standalone",
-		"build:webpack": "webpack --mode=production",
-		"analyze": "webpack --mode=production --env analyze",
-		"format": "prettier --write .",
-		"check-format": "prettier --check .",
-		"watch-tests": "cross-env BABEL_ENV=test jest --watch",
-		"coverage": "cross-env BABEL_ENV=test jest --coverage"
+		"lint": "eslint --cache --fix"
 	},
 	"eslintConfig": {
 		"extends": [
@@ -58,12 +50,6 @@
 		]
 	},
 	"devDependencies": {
-		"@babel/core": "^7.15.0",
-		"@babel/eslint-parser": "^7.15.0",
-		"@babel/plugin-transform-runtime": "^7.15.0",
-		"@babel/preset-env": "^7.15.0",
-		"@babel/preset-react": "^7.14.5",
-		"@babel/runtime": "^7.15.3",
 		"@testing-library/jest-dom": "^5.14.1",
 		"@testing-library/react": "^12.0.0",
 		"@testing-library/react-hooks": "^7.0.2",
@@ -71,29 +57,20 @@
 		"@types/jest": "^27.0.1",
 		"autoprefixer": "^9.8.6",
 		"babel-eslint": "^10.1.0",
-		"babel-jest": "^27.0.6",
 		"concurrently": "^6.2.1",
-		"cross-env": "^7.0.3",
-		"eslint": "^7.32.0",
+		"craco-plugin-single-spa-application": "^1.0.8",
 		"eslint-config-prettier": "^8.3.0",
-		"eslint-config-react-important-stuff": "^3.0.0",
-		"eslint-plugin-prettier": "^3.4.1",
+		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-react": "^7.25.0",
 		"eslint-plugin-unused-imports": "^1.1.4",
-		"husky": "^7.0.2",
-		"identity-obj-proxy": "^3.0.0",
-		"jest": "^27.0.6",
-		"jest-cli": "^27.0.6",
+		"install-peers": "^1.0.3",
 		"postcss": "^7.0.36",
-		"prettier": "^2.3.2",
+		"prettier": "^2.4.1",
 		"pretty-quick": "^3.1.1",
-		"tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.9",
-		"url-loader": "^4.1.1",
-		"webpack": "^5.51.1",
-		"webpack-cli": "^4.8.0",
-		"webpack-config-single-spa-react": "^4.0.0",
-		"webpack-dev-server": "^4.0.0",
-		"webpack-merge": "^5.8.0"
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"single-spa-react": "^4.4.0",
+		"tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.9"
 	},
 	"peerDependencies": {
 		"react": "^17.0.2",
