--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@zuri/zuri-plugin-deadlines",
+	"name": "zc-reminder",
 	"version": "1.0.0",
 	"description": "## #team-darwin",
 	"main": "index.js",
@@ -11,9 +11,7 @@
 		"test:watch": "cross-env NODE_ENV=test mocha ./tests/**/*.spec.js -r @babel/register --timeout=100000 --watch --exit",
 		"start:backend": "cross-env NODE_ENV=production nodemon --exec babel-node ./src/index.js",
 		"start:frontend": "cd frontend && npm start",
-		"start:root": "cd root && npm start",
-		"dev:frontend": "npm-run-all --parallel start:frontend start:root",
-		"dev": "npm-run-all --parallel start:backend dev:frontend",
+		"dev": "concurrently \"yarn start:backend\" \"yarn start:frontend\"",
 		"clean": "rimraf dist",
 		"build": "cd frontend && yarn build && cd .. && yarn clean && babel src -d dist --source-maps --copy-files",
 		"start": "node ./dist/index.js"
@@ -32,12 +30,19 @@
 	"devDependencies": {
 		"@babel/cli": "^7.14.8",
 		"@babel/core": "^7.15.0",
+		"@babel/eslint-parser": "^7.15.0",
+		"@babel/eslint-plugin": "^7.14.5",
 		"@babel/node": "^7.14.9",
 		"@babel/plugin-proposal-class-properties": "^7.14.5",
 		"@babel/plugin-transform-runtime": "^7.15.0",
 		"@babel/preset-env": "^7.15.0",
+		"@babel/preset-react": "^7.14.5",
+		"@babel/preset-typescript": "^7.15.0",
+		"@babel/register": "^7.15.3",
+		"@babel/runtime": "^7.15.3",
 		"babel-plugin-module-resolver": "^4.1.0",
 		"chai": "^4.3.4",
+		"concurrently": "^6.2.1",
 		"craco-plugin-single-spa-application": "^1.0.8",
 		"cross-env": "^7.0.3",
 		"eslint": "^7.32.0",
@@ -50,19 +55,15 @@
 		"lint-staged": "^11.1.2",
 		"mocha": "^9.1.1",
 		"nodemon": "^2.0.12",
-		"npm-run-all": "^4.1.5",
-		"postcss-loader": "^6.1.1",
 		"prettier": "^2.3.2",
-		"pretty-quick": "^3.1.1",
-		"rimraf": "^3.0.2",
-		"style-loader": "^3.3.0"
+		"rimraf": "^3.0.2"
 	},
 	"lint-staged": {
 		"*.{js,jsx}": "eslint --cache --no-error-on-unmatched-pattern --fix"
 	},
 	"husky": {
 		"hooks": {
-			"pre-commit": "yarn exec pretty-quick --staged && yarn:lint"
+			"pre-commit": "yarn exec pretty-quick --staged && yarn exec concurrently yarn:test yarn:lint"
 		}
 	},
 	"dependencies": {
@@ -80,7 +81,9 @@
 		"faker": "^5.5.3",
 		"http-status-codes": "^2.1.4",
 		"joi": "^17.4.2",
+		"luxon": "^2.0.2",
 		"mongoose": "^6.0.3",
+		"react-activity": "^2.1.1",
 		"react-icons": "^4.2.0",
 		"supertest": "^6.1.6",
 		"swagger-jsdoc": "^6.1.0",
