--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,7 @@
 	},
 	"scripts": {
 		"start": "webpack serve --port 9001",
-		"build": "rm -rf dist && NODE_ENV=production CI=true webpack --mode=production",
+		"build": "rm -rf build && NODE_ENV=production CI=true webpack --mode=production",
 		"test": "cross-env BABEL_ENV=test jest",
 		"eject": "react-scripts eject",
 		"lint": "eslint src --ext js",
